<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".presentation.main.MainActivity">
	
	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">
		<include layout="@layout/toolbar"/>
	</com.google.android.material.appbar.AppBarLayout>
	
	<include
		android:id="@+id/content_layout"
		layout="@layout/content_main" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

